<resources>
    <string name="app_name">SpotifyStreamer</string>

    <!--
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

-->
    <string name="menu_search">Search</string>
    <string name="text_search_hint">Search for albums…</string>
    <string name="text_intro_search">To start searching, press the search button at the top.</string>
    <string name="text_searching">Searching…</string>



    <string name="action_settings">Settings</string>
    <string name="desc_album_cover">Album Cover</string>
    <string name="desc_perv">perv</string>
    <string name="desc_next">perv</string>
    <string name="desc_play">play</string>
    <string name="desc_pause">pause</string>

    <string name="text_no_result">No Result</string>
    <string name="text_top_10_tracks">Top 10 Tracks</string>
    <string name="text_default_duration">0:00</string>
    <string name="text_not_implemented">Event is not implemented.</string>
    <string name="text_network_error">Unknown network error.</string>
    <string name="text_network_bad_request">Network Error - Bad Request.</string>
    <string name="key_locale">pref_locale</string>
    <string name="key_notification">pref_notification</string>
    <string name="currently_playing_song">Now Playing...</string>
    <string name="currently_playing_artist">Artist</string>
    <string name="currently_playing_extra_info">Extra Info</string>
    <string name="play_pause">Play / Pause</string>
    <string name="action_share">Share</string>
    <string name="now_playing">Now Playing</string>
    <string name="album_art" >Album Art</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
</resources>
