
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="idv.seventhmoon.spotifystreamer.PlayerFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_album_name"
        android:layout_alignParentTop="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_album_artist"
        android:layout_below="@id/text_album_name"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_album_cover"
        android:contentDescription="@string/desc_album_cover"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_track_name"
        android:layout_centerVertical="true"
        android:layout_below="@id/image_album_cover"/>

    <RelativeLayout
        android:id="@+id/holder_seek_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_track_name"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_current_position"
            android:layout_alignParentLeft="true"
            tools:ignore="RtlHardcoded"
            android:text="@string/text_default_duration"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_total_duration"
            android:layout_alignParentRight="true"
            android:text="@string/text_default_duration"

            tools:ignore="RtlHardcoded" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_toLeftOf="@id/text_current_position"
            android:layout_toRightOf="@id/text_total_duration"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>


    <ImageButton
        android:src="@drawable/ic_skip_previous_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_perv"
        android:layout_below="@+id/holder_seek_panel"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/desc_perv"
        tools:ignore="RtlHardcoded"/>

    <ImageButton
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_play"
        android:layout_below="@+id/holder_seek_panel"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_play" />

    <ImageButton
        android:src="@drawable/ic_pause_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_pause"
        android:layout_below="@+id/holder_seek_panel"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_pause"
        android:visibility="gone"/>

    <ImageButton
        android:src="@drawable/ic_skip_next_black_24dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/image_next"
        android:layout_below="@+id/holder_seek_panel"
        android:contentDescription="@string/desc_next"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded"/>

</RelativeLayout>